Fixed spacing around the map & list buttons.
git-svn-id: http://ala-hubs.googlecode.com/svn/branches/bio_hubs_webapp@298 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/search.css
+++ b/src/main/webapp/css/search.css
@@ -76,7 +76,7 @@
 }
 
 #listMapToggle {
-    margin-top: 5px;
+    margin-top: 2px;
 }
 .sidebar li {
     border: none;
